# FireStreamer

./: .gitignore  Cargo.toml
FireHub/: .clang-format
FireHub/ApplicationServer/: .gitignore  ApplicationServer.cgi  ApplicationServer.cpp  ApplicationServer.h  ApplicationServerConstants.h  Handlers.cpp  Makefile  compile_commands.json  runbook.txt
FireHub/ApplicationServer/test/: Makefile  compile_commands.json  ctest.c  ctest.h  defs.h  server_stubs.c  test_example.c  test_movie_instance_metadata.c  test_server.py  testlib.c
FireHub/ApplicationServer/test_data/: ApplicationServer.getMovieInstanceMetadataById.req.xml
FireHub/common/: BaseApplication.cpp  BaseApplication.h  CommonConstants.h  Configuration.cpp  Configuration.h  Database.cpp  Database.h  LoggerHelper.cpp  LoggerHelper.h  Utils.cpp  Utils.h
FireHub/dao/: MovieInstanceMetadataDAO.cpp  MovieInstanceMetadataDAO.h
FireHub/schema/: ApplicationServer.xsd
app-server/: .env  Cargo.toml
app-server/migrations/2024-05-25-200822_movies/: up.sql
app-server/migrations/2024-06-07-083138_movie_genres/: down.sql  up.sql
app-server/src/: constants.rs  get_movies_handler.rs  main.rs  models.rs
firehub/: .clang-format  pubspec.yaml
firehub-tizen/firehub_tizen/: README.md  pubspec.yaml
firehub-tizen/firehub_tizen/linux/: CMakeLists.txt  my_application.cc
firehub/android/app/: build.gradle
firehub/lib/: common.dart  main.dart  shelf.dart
firehub/linux/: CMakeLists.txt
firehub/web/: index.html
movie-collector/: .env  movie.py  utils.py
test/: run_tests.py  test_base.py
uml/: FireStreamer.mdj
(+52 files in other folders)
