[package]
name = "app-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7.5" }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
diesel = { version = "2.1.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
